k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-demo-app
  labels:
    name: eks-demo-app
    purpose: demo-application
