k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-app-service
  namespace: eks-demo-app
  labels:
    app: eks-demo-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: eks-demo-app
